@@ -474,7 +474,7 @@ public class StandardHost extends ContainerBase implements Host {
     /**
      * Deploy XML Context config files flag mutator.
      *
-     * @param deployXML <code>true</code> if context descirptors should be deployed
+     * @param deployXML <code>true</code> if context descriptors should be deployed
      */
     public void setDeployXML(boolean deployXML) {
 
@@ -582,7 +582,7 @@ public class StandardHost extends ContainerBase implements Host {
     /**
      * Unpack WARs flag mutator.
      *
-     * @param unpackWARs <code>true</code> to unpack WARs on deployement
+     * @param unpackWARs <code>true</code> to unpack WARs on deployment
      */
     public void setUnpackWARs(boolean unpackWARs) {
 
@@ -859,7 +859,7 @@ public class StandardHost extends ContainerBase implements Host {
                 }
                 if(!found) {
                     Valve valve =
-                        (Valve) Class.forName(errorValve).newInstance();
+                        (Valve) Class.forName(errorValve).getConstructor().newInstance();
                     getPipeline().addValve(valve);
                 }
             } catch (Throwable t) {
